pulsar/manager/deployment.yaml
# pulsar-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulsar-manager
  namespace: pulsar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulsar-manager
  template:
    metadata:
      labels:
        app: pulsar-manager
    spec:
      containers:
      - name: pulsar-manager
        image: apachepulsar/pulsar-manager:v0.3.0  # Use the correct image version
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pulsar-manager-config
          mountPath: /pulsar-manager/conf
          subPath: application.yml
      volumes:
      - name: pulsar-manager-config
        configMap:
          name: pulsar-manager-config
