pulsar/manager/svc.yaml
# pulsar-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsar-manager
  namespace: pulsar
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: pulsar-manager
